# SimpleControl

./: CMakeLists.txt  LICENSE  README.md
content/: App.qml  Constants.qml  DeviceSelecting.qml  DeviceSelectingForm.ui.qml  Home.qml  HomeForm.ui.qml  Operations.qml  OperationsForm.ui.qml  ScriptEditor.qml  ScriptEditorForm.ui.qml
content/propertiesForm/: Plc.qml  PlcForm.ui.qml  PlcSetDoOff.qml  PlcSetDoOffForm.ui.qml  PlcSetDoOn.qml  PropertyItem.ui.qml  Robot.qml  RobotForm.ui.qml  RobotMove.qml  RobotMoveForm.ui.qml  RobotStop.qml  RobotStopForm.ui.qml  Screwdriver.qml  ScrewdriverStart.qml  ScrewdriverStop.qml  ScrewdriverStopForm.ui.qml
content/uiControls/: ButtonA.ui.qml  ButtonB.ui.qml  ButtonC.ui.qml  CommandBlock.ui.qml  DeviceBlock.ui.qml
src/: ScriptManager.h  TypeHelper.h  main.cpp
src/command/: CommandBase.h  DeltaScrewdirverStartCommand.h  DeltaScrewdirverStopCommand.h  DensoRobotMoveCommand.h  DensoRobotStopCommand.h  KukaRobotMoveCommand.h  KukaRobotStopCommand.h  SimensPlcSetDoOffCommand.h  SimensPlcSetDoOnCommand.h
src/device/: DeltaScrewdriver.h  DensoRobot.h  DeviceBase.h  KukaRobot.h  PlcBase.h  RobotBase.h  ScrewdriverBase.h  SimensPlc.h
src/model/: CommandListModel.h  DeviceListModel.h
src/state/: PausedState.cpp  PausedState.h  ReadyState.cpp  ReadyState.h  RunningState.cpp  RunningState.h  StateBase.h
